ingress-nginx-sample/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - path: /nginx(/|$)(.*)
          backend:
            serviceName: nginx-demo-service
            servicePort: 8081
        - path: /app(/|$)(.*)
          backend:
            serviceName: app-demo-service
            servicePort: 8082
